--- a/Annuaire/WebContent/resources/css/style.css
+++ b/Annuaire/WebContent/resources/css/style.css
@@ -45,7 +45,7 @@
 	background-color: #2d2d2d;
 }
 
-#navigation
+#nav div
 {
 	border: solid black 1px;
 	border-radius: 0px 0px 10px 0px;
@@ -56,7 +56,7 @@
 	background-color: white;
 }
 
-#navigation a
+#nav a
 {
 	color: #2d2d2d;
 	text-decoration: none;
@@ -128,4 +128,19 @@ figcaption
 	text-align: center;
 	font-style: italic;
 	padding-bottom: 40px;
+}
+
+.center {
+	text-align: center;
+}
+
+.right {
+	text-align: right;
+}
+
+#loginForm {
+	width: 400px;
+	height: 100px;
+	padding-top: 100px;
+	margin: auto;
 }
