Renommage des fichiers jsp en jspx

--- a/Annuaire/WebContent/WEB-INF/jspx/login.jspx
+++ b/Annuaire/WebContent/WEB-INF/jspx/login.jspx
@@ -43,7 +43,9 @@
 				</fieldset>
 			</form:form>
 			<div class="center">
+				<c:if test="${!empty error}">
 					<p><c:out value="${error}"/></p>
+				</c:if>
 				<a href="${retrievepw}">Mot de passe oublié ?</a>
 			</div>
 		</div>
