--- a/Annuaire/WebContent/WEB-INF/jspx/personAddition.jspx
+++ b/Annuaire/WebContent/WEB-INF/jspx/personAddition.jspx
@@ -65,7 +65,7 @@
 				<td>Groupe :</td>
 				<td>
 				<form:select path="groups" multiple="false">
-					<form:option value=NULL label="Séléctionner un groupe" />
+					<form:option value="" label="Séléctionner un groupe" />
  					<form:options items="${groupsList}" itemLabel="groupname"
 									itemValue="groupname" />
 				</form:select>
