l'ajout d'un groupe ou d'une personne déjà existant affiche un petit message d'erreur

--- a/Annuaire/WebContent/WEB-INF/jspx/groupAddition.jspx
+++ b/Annuaire/WebContent/WEB-INF/jspx/groupAddition.jspx
@@ -28,6 +28,11 @@
 				<td>Nom :</td>
 				<td><form:input path="groupname" /></td>
 				<td><form:errors path="groupname" /></td>
+				<td>
+					<c:if test="${!empty error}">
+						<c:out value="${error}"/>
+					</c:if>
+				</td>
 			</tr>
 			<tr>
 				<td colspan="3"><input type="submit" /></td>
